--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,8 @@
-# pandas
-# tensorflow
-# torch
-# plotly
-# missingno
-# nltk
-# OSMPythonTools
-# shapely
-# haversine
-# category_encoders
-# pytorch_lightning
-# transformers
-# nbformat
-numpy
-pandas
-matplotlib
+numpy==1.26.3
+pandas==2.2.0
+matplotlib==3.8.2
 fastapi==0.96.0
-uvicorn[standard]==0.22.0
+uvicorn==0.22.0
 loguru==0.7.0
 joblib==1.1.0
 scikit-learn==1.0.2
